<resources>
    <string name="app_name">My Application</string>

    //nuevos strings
    <string name="hola">Hola</string>
    <string name="menu_search">search</string>
    <string name="menu_icon">icon</string>
    <string name="AppToDo">App ToDo</string>
    <string name="todo_categories">categorias</string>
    <string name="prueba">PRUEBA</string>
    <string name="todo_tasks">Tareas</string>
    <string name="Añadir_tarea">Añade la Tarea</string>
    <string name="negocios">Negocios</string>
    <string name="Shoping">Compras</string>
    <string name="CreateTask">Crear Tarea</string>
    <string name="home">Hogar</string>
    <string name="personal">Personal</string>
</resources>