<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/BackgroundColor"
        android:orientation="vertical">

        <TextView
            android:id="@+id/AppTodoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="37sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/AppToDo"
            android:layout_marginVertical="30dp"
            android:layout_marginHorizontal="30dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_categories"
            android:textColor="@color/SubtitleTextColor"
            android:layout_marginHorizontal="30dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_tasks"
            android:textColor="@color/SubtitleTextColor"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:id="@+id/rvTasks"
            />

    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/FabAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_plus"
        android:backgroundTint="@color/FabAddTask"
        android:layout_margin="32dp"
        app:fabSize="auto"
        tools:ignore="ContentDescription"
        android:layout_gravity="end|bottom"
        />
</FrameLayout>